--- a/index.html
+++ b/index.html
@@ -1,71 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- 
-Mobile Devices: 319px — 480px
-iPads and Tablets: 481px — 1200px
-Laptops: 1201px — 1600px
-Desktops: 1601px and more
--->
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
-
-    <title>Document</title>
-    <style>
-        body {
-            background-color: aquamarine;
-        }
-
-        img {
-            height: 100px;
-            width: 100px;
-        }
-
-        @media (min-width: 319px) and (max-width: 480px) {
-            body {
-                background-color: red;
-            }
-
-            img {
-                height: 250px;
-                width: 250px;
-            }
-        }
-
-        @media (min-width: 481px) and (max-width: 1200px) {
-            body {
-                background-color: blue;
-            }
-
-            img {
-                height: 650px;
-                width: 650px;
-            }
-        }
-
-        @media (min-width: 1201px) and (max-width: 1600px) {
-            body {
-                background-color: green;
-            }
-
-            img {
-                height: 1000px;
-                width: 1000px;
-            }
-        }
-
-        @media (min-width: 1601px) {
-            body {
-                background-color: yellow;
-            }
-        }
-    </style>
+    <title>QaidiGamer</title>
+    <link rel="stylesheet" href="./qg.css" />
 </head>
 
-<body>
-    <img src="/images/bgmi.jpg">
+<body class="body">
+    <div class="header">
+        <label id="home">Home</label>
+        <a href="post.html"><label id="post">Post</label></a>
+        <a href="games.html"><label id="games">Games</label></a>
+        <label id="h1">QG</label>
+
+    </div>
+
+    <div class="intro">
+        <video loop muted autoplay="autoplay">
+            <source src="webvideo.mp4" type="video/mp4">
+        </video>
+    </div>
+
+    <div class="content">
+        <label id="game-on">GAME &nbsp;ON</label>
+        <br>
+        <label id="anywhere">Anywhere</label>
+        <br>
+        <label id="anytime">Anytime</label>
+
+    </div>
+
+    <div class="img-container">
+
+        <img id="bgmi-ff" src="./ff-bgmi.png" alt="BGMI">
+    </div>
+
+    <br><br><br><br><br><br><br><br>
+    <div class="bgmi">
+        <a href="bgmi.html"><img src="./bgmi.jpg" alt="BGMI"></a>
+    </div>
+
+    <div class="ff">
+        <a href="ff.html"><img src="./ff.jpg" alt="FREEFIRE"></a>
+    </div>
+    <br><br><br><br><br><br>
+    <hr><br>
+    <footer>
+        <div class="footer">
+            <label id="qg-name">QG Qaidi Gamer ESports</label><br>
+            <label id="copy-right">&copy;2024 QaidiGamer, Inc. All rights reserved.<br>Privacy
+                Policy&nbsp;|&nbsp;Terms
+                of
+                Service&nbsp;|&nbsp;Rules of Conduct&nbsp;|&nbsp;Official Community Policy&nbsp;|&nbsp;Content Creation
+                Guideline
+            </label>
+            <br><br>
+            <a href="https://youtube.com/@qaidigamer6033?si=U0JZUwLZTCB8zeWF"><img src="./youtube.png" alt="YouTube"
+                    width="50" height="50"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="https://www.instagram.com/choudharypankaj_03?igsh=MW01Nms2MHpjcHoxbg=="><img src="./instagram.png"
+                    alt="Instagram" width="50" height="50"></a>
+
+        </div>
+    </footer>
+
 </body>
 
 </html>
